syntax = "proto3";

package api.customer.v6;
import "google/api/annotations.proto";
option go_package = "anjuke/api/customer/v6;v6";
option java_multiple_files = true;
option java_package = "api.customer.v6";
option java_outer_classname = "CustomerProtoV6";

service Customer {
	rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerReply){
		option (google.api.http) = {
			post: "/customer/create"
			body:"*"
		};
	};
}

message CreateCustomerRequest {}
message CreateCustomerReply {}